# periapsis

./: .gitignore  LICENSE  README.md  example_notebook.ipynb  pyproject.toml
src/periapsis/: __init__.py
src/periapsis/data/: __init__.py  common.py  data.py  gaia.py  joint_data.py
src/periapsis/fitting/: __init__.py  fitter.py  gaia_mcmclinear.py  gaia_ultranestlinear.py  mcmc.py  mcmcCampbell.py  mcmcThieleInnes.py  mcmclinear.py  results.py  ultranestCampbell.py  ultranestThieleInnes.py  ultranestlinear.py
src/periapsis/initial/: __init__.py  gaia_initial.py  initial.py
src/periapsis/model/: __init__.py  campbell.py  orbit.py  thieleinnes.py
src/periapsis/params/: __init__.py  transforms.py
src/periapsis/plotting/: plots.py
src/periapsis/prior/: __init__.py  bounds.py  fixed_prior.py  log_normal_prior.py  log_uniform_prior.py  normal_prior.py  prior.py  uniform_prior.py
src/periapsis/stats/: stat_funcs.py
src/periapsis/utils/: helpers.py  solvers.py
tests/: test_data.py  test_fitting.py  test_model.py  test_prior.py  test_results.py  test_stats.py
